criação- function/copy- copiar área do button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <input type="text" id="passworld" name="passworld">
     <input type="range" id="passworld-length" value="16" min="4" max="64">
-    <button>Copiar Senha</button>
+    <button id="copy">Copiar Senha</button>
 
     <script src="js/main.js"></script>
 </body>
