--- a/index.html
+++ b/index.html
@@ -26,10 +26,43 @@
          <div class="actions">
           <button id="copy1">
             <img src="copy.svg" width="42"/>
-          </button>
+          </button><!--copy-->
+          <button id="renew">
+            <img src="renew.svg" width="42">
+          </button><!--renew-->
          </div><!--actions-->  
         </div><!--passworld-->
+        <div class="security-indicator">
+         <div id="security-indicator-bar" class="bar" style="width: 90%;"></div>
+        </div><!--security-indicator-->
     </section><!--box-->
+
+    <section class="box customize">
+        <h3 class="title">Personalizar</h3>
+        <div class="actions">
+          <div class="password-length">
+            <p>Tamanho: <span id="password-length-text">16</span></p>
+            <input type="range" name="password-length" id="password-length" class="slider"  value="16" min="4"  max="64"/>
+          </div><!--passworld-length-->
+          <div class="config">
+            <label class="checkbox-container">
+              <span class="text">Maiúsculas</span>
+              <input type="checkbox" id="uppercase-check" checked />
+              <span class="checkmark"></span>
+            </label>
+            <label class="checkbox-container">
+              <span class="text">Números</span>
+              <input type="checkbox" id="number-check" checked />
+              <span class="checkmark"></span>
+            </label>
+            <label class="checkbox-container">
+              <span class="text">Símbolos</span>
+              <input type="checkbox" id="symbol-check" checked />
+              <span class="checkmark"></span>
+            </label>
+          </div><!--config-->
+        </div><!--actions-->
+      </section><!--box customize-->
 
     <script src="js/main.js"></script>
 </body>
