--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div><!--actions-->
           </div><!--passworld-->
           <div class="security-indicator">
-            <div id="security-indicator-bar" class="bar safe" style="width: 90%"></div>
+            <div id="security-indicator-bar" class="bar safe"></div>
           </div><!--security-indicator-->
         </section><!--box-->
 
